# Honesty

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  conanfile.py  pyproject.toml
.github/: pr-labeler.yml
.github/workflows/: config-sync.yml  pr-labeler.yml  release-management.yml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: assertions.adoc  index.adoc  modules.adoc  targets.adoc
src/: CMakeLists.txt  honesty.ixx
src/honesty/: CMakeLists.txt  generator.ixx  honesty.ixx  log.ixx  platform.ixx  terminal.ixx  test.ixx  utility.ixx
src/honesty/benchmark/: CMakeLists.txt  benchmark.ixx  context.ixx
src/honesty/log/: CMakeLists.txt  colour.cpp  colour.ixx  log.ixx  logger.cpp  logger.ixx  types.ixx
src/honesty/log/sink/: CMakeLists.txt  callback.ixx  console.cpp  console.ixx  ostream.ixx  ringbuffer.cpp  ringbuffer.ixx  scatter.ixx  sink.cpp  sink.ixx  synchronized.ixx
src/honesty/platform/: CMakeLists.txt  platform.cpp  platform.ixx
src/honesty/profile/: CMakeLists.txt  profile.ixx
src/honesty/terminal/: CMakeLists.txt  terminal.cpp  terminal.ixx
src/honesty/test/: CMakeLists.txt  api.ixx  assert.cpp  assert.ixx  backend.cpp  backend.ixx  command.ixx  commands.ixx  context.cpp  counter.ixx  entry.cpp  entry.ixx  exception.cpp  exception.ixx  expression.cpp  expression.ixx  fixture.ixx  frontend.ixx  function_ref.ixx  generator.ixx  honesty.ixx  inplace_vector.ixx  instance.cpp  instance.ixx  interface.cpp  interface.ixx  literals.ixx  logger.cpp  logger.ixx  main.cpp  registry.cpp  reporter.cpp  reporter.ixx  runner.cpp  runner.ixx  set.cpp  set.ixx  suite.cpp  suite.ixx  tag.cpp  (+4 more)
src/honesty/test/api/: CMakeLists.txt  api.ixx  execute.cpp  execute.ixx  list.cpp  list.ixx  types.cpp  types.ixx
src/honesty/test/backend/: CMakeLists.txt  assert.ixx  backend.cpp  backend.ixx  data.ixx  fixture.ixx  generator.ixx  logger.cpp  logger.ixx  reporter.cpp  reporter.ixx  reporter_registry.ixx  requirements.ixx  runner.cpp  runner.ixx  runner_registry.ixx  storage.ixx  suite.cpp  suite.ixx  suite_context.ixx  tag.ixx  test.cpp  test.ixx  test_context.ixx  thread_context.ixx  types.ixx
src/honesty/test/command/: CMakeLists.txt  execute.cpp  list.cpp  types.cpp
src/honesty/test/commands/: CMakeLists.txt  commands.ixx  execute.cpp  list.cpp  list.ixx  types.cpp
src/honesty/test/commands/reporter/: CMakeLists.txt  compact.ixx  default.ixx  standard.ixx
src/honesty/test/commands/runner/: CMakeLists.txt  default.ixx  standard.ixx
src/honesty/test/context/: CMakeLists.txt  context.ixx  data.ixx  types.ixx
src/honesty/test/core/: CMakeLists.txt  core.ixx  suite_context.ixx  test_context.ixx
src/honesty/test/entry/: CMakeLists.txt  entry.cpp  entry.ixx  python.cpp
src/honesty/test/interface/: CMakeLists.txt  interface.cpp  interface.ixx
src/honesty/test/logger/: CMakeLists.txt  console.cpp  console.ixx  logger.ixx  stdout.ixx
src/honesty/test/reporter/: CMakeLists.txt  compact.cpp  compact.ixx  console.cpp  console.ixx  default.cpp  default.ixx  export.cpp  list.ixx  reporter.cpp  reporter.ixx  stdout.ixx
src/honesty/test/runner/: CMakeLists.txt  default.cpp  default.ixx  export.cpp  local.cpp  local.ixx  runner.cpp  runner.ixx  single.cpp  single.ixx
src/honesty/test/types/: CMakeLists.txt  assert.ixx  exception.ixx  fixture.ixx  reporter.ixx  requirements.ixx  runner.ixx  suite.ixx  suite_context.ixx  tag.ixx  test.ixx  test_context.ixx  types.ixx
src/honesty/utility/: CMakeLists.txt  exception.ixx  fixed_string.ixx  function_ref.ixx  generator.ixx  hash.ixx  inplace_string.ixx  inplace_vector.ixx  json.ixx  string.ixx  traits.ixx  utility.ixx
tests/: CMakeLists.txt
tests/mock/: CMakeLists.txt  test.ixx
tests/unit/: CMakeLists.txt  test_exception.cpp  test_log.cpp  test_logger.cpp  test_reporter.cpp  test_runner.cpp  test_set.cpp  test_suite.cpp  test_tag.cpp  test_terminal.cpp  test_test.cpp
tests/unit/benchmark/: CMakeLists.txt  test_context.cpp
tests/unit/log/: CMakeLists.txt  test_colour.cpp  test_logger.cpp
tests/unit/terminal/: CMakeLists.txt  test_terminal.cpp
tests/unit/test/: CMakeLists.txt  test_api.cpp  test_command.cpp  test_entry.cpp  test_exception.cpp  test_expression.cpp  test_fixture.cpp  test_inplace_string.cpp  test_instance.cpp  test_interface.cpp  test_log.cpp  test_logger.cpp  test_reporter.cpp  test_runner.cpp  test_suite.cpp  test_tag.cpp  test_test.cpp  test_thread_context.cpp
tests/unit/utility/: CMakeLists.txt  test_hash.cpp  test_json.cpp  test_string.cpp
tool/cmake/modules/: honesty.cmake  honestyAddTests.cmake
tool/cmake/platform/common/: CMakePresets.json
tool/cmake/platform/linux/: CMakePresets.json
tool/cmake/platform/mac/: CMakePresets.json
tool/cmake/platform/windows/: CMakePresets.json
tool/cmake/script/: honestyAddTests.cmake
tool/cmake/test/: honesty_add_test.cmake
