[project]
description = "Profiling, testing, and benchmarking"
name = "honesty"

license = {text = "MIT"}

authors = [
  {name = "Synodic Software", email = "contact@synodic.software"},
]

readme = "README.md"

dynamic = ["version"]

dependencies = []
requires-python = ">=3.12"

[project.license-files]
paths = ["LICENSE.md"]

[project.urls]
homepage = "https://github.com/Synodic-Software/Honesty"
repository = "https://github.com/Synodic-Software/Honesty"

[tool.pdm.dev-dependencies]
dev = [
  "cmake>=3.29.0",
  "cppython-conan>=0.0.0.dev1",
  "cppython-pdm>=0.2.8.dev2",
]
lint = [
  "black>=24.3.0",
  "pylint>=3.1.0",
  "isort>=5.13.2",
  "mypy>=1.9.0",
]
test = [
  "pytest>=8.0.2",
  "pytest-cov>=4.1.0",
  "pytest-click>=1.1",
  "pytest-mock>=3.12.0",
  "pytest-cppython>=0.2.0.dev0",
]

[tool.pdm.options]
update = ["--update-all"]

[tool.pdm.scripts]
build = {shell = "cppython build"}
test = {shell = "cppython test"}

[build-system]
run-setuptools = true # Required for C extensions
build-backend = "pdm.backend"
requires = ["pdm.backend", "nanobind"]
