[project]
description = "Profiling, testing, and benchmarking"
name = "honesty"

license = {text = "MIT"}

authors = [
  {name = "Synodic Software", email = "contact@synodic.software"},
]

readme = "README.md"

dynamic = ["version"]

dependencies = []
requires-python = ">=3.13"

[project.urls]
homepage = "https://github.com/Synodic-Software/Honesty"
repository = "https://github.com/Synodic-Software/Honesty"

[tool.pdm.dev-dependencies]
dev = [
  "cmake>=3.29.0",
]
lint = [
  "black>=24.3.0",
  "pylint>=3.1.0",
  "isort>=5.13.2",
  "mypy>=1.9.0",
]
test = [
  "pytest>=8.0.2",
  "pytest-cov>=4.1.0",
  "pytest-click>=1.1",
  "pytest-mock>=3.12.0",
]

[tool.pdm.options]
update = ["--update-all"]

[tool.pdm.scripts]
build = {shell = "cppython build"}
test = {shell = "cppython test"}

[build-system]
build-backend = "pdm.backend"
requires = ["pdm.backend"]
